--- a/style.css
+++ b/style.css
@@ -26,27 +26,58 @@ body {
     padding: 1rem;
     border: 3px solid black;
     background-color: #14213d;
-    overflow: hidden;
 }
 
 .visor {
+    display: flex;
+    position: relative;
+    flex-direction: column;
     width: 100%;
-    min-height: 17vh;
+    min-height: 15vh;
     background-color: lightgreen;
     border: 3px solid white;
     text-align: right;
     word-wrap: break-word;
     font-family: "Orbitron", sans-serif;
+}
+
+.previous {
+    width: 100%;
+    min-height: 50%;
     font-size: 30px;
+}
+
+.operation {
+    position: absolute;
+    top: calc(50% - 15px);
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+.actual {
+    width: 100%;
+    min-height: 50%;
+    font-size: 26px;
 }
 
 .numbers, .operators {
     display: flex;
     flex-grow: 1;
-    flex-flow: row-reverse wrap;
-    justify-content: space-around;
     align-content: space-between;
     gap: 10px;
+}
+
+.numbers {
+    flex-flow: row-reverse wrap;
+    justify-content: space-around;
+}
+
+.operators {
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 .number, .operator {
